--- a/DrumKit/style.css
+++ b/DrumKit/style.css
@@ -1,13 +1,29 @@
+body {
+    background-image: url(img/img.jpg);
+    background-size: 1600px 800px;
+    background-repeat: no-repeat;
+}
+
 .keys{
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    min-height: 100vh;
    
    
 }
 
 .box {
     display: flex;
-    border: solid 2px pink; 
-    justify-content: space-between;
+    border: solid 2px black; 
+    color:black;
+    width: 100px;
+    height: 120px;
+    min-width: 100px;
+    min-height: 100px;
     align-items: center;
+    flex-direction: column;
+    transition: all .07s ease;
+    
 }
+
