--- a/01-DrumKit/style.css
+++ b/01-DrumKit/style.css
@@ -1,29 +1,43 @@
 body {
-    background-image: url(img/img.jpg);
-    background-size: 1600px 800px;
-    background-repeat: no-repeat;
+  background-image: url(img/battery.jpg);
+  background-size: cover;
+  
 }
 
-.keys{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 100vh;
-   
-   
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .box {
+  background-color: rgba(153, 136,34, 0.3);
+  display: flex;
+  border: solid 2px rgb(153, 136,34);
+  border-radius: 10px;
+  color: black;
+  width: 100px;
+  height: 120px;
+  min-width: 100px;
+  min-height: 100px;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  transition: all 0.07s ease;
+}
+.box-active{
+    background-color: rgb(51, 222, 219);
     display: flex;
-    border: solid 2px black; 
-    color:black;
+    border: solid 2px rgb(94, 129, 129);
+    border-radius: 10px;
+    color: black;
     width: 100px;
     height: 120px;
     min-width: 100px;
     min-height: 100px;
     align-items: center;
+    text-align: center;
     flex-direction: column;
-    transition: all .07s ease;
-    
+    transition: all 0.07s ease;
 }
-
